Add Table and Tests

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,6 +5,8 @@
       "label": "C/C++: g++.exe сборка активного файла",
       "command": "C:\\Program Files\\mingw64\\bin\\g++.exe",
       "args": [
+        "-I",
+        "${workspaceFolder}\\Headers",
         "-g",
         "${workspaceFolder}\\Files\\**.cpp",
         "-o",
